# QuarkNet

gr-usrp_reader_gen2/: CMakeLists.txt  MANIFEST.md
gr-usrp_reader_gen2/apps/: WISP_reader.py
gr-usrp_reader_gen2/cmake/Modules/: usrp_reader_gen2Config.cmake
gr-usrp_reader_gen2/docs/: README.usrp_reader_gen2
gr-usrp_reader_gen2/docs/doxygen/: Doxyfile.in
gr-usrp_reader_gen2/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-usrp_reader_gen2/grc/: CMakeLists.txt  usrp_reader_gen2_rfid_center_ff.xml  usrp_reader_gen2_rfid_clock_recovery_zc_ff.xml  usrp_reader_gen2_rfid_command_gate_cc.xml  usrp_reader_gen2_rfid_reader_decoder.xml  usrp_reader_gen2_rfid_reader_f.xml  usrp_reader_gen2_rfid_tag_decoder_f.xml
gr-usrp_reader_gen2/include/usrp_reader_gen2/: CMakeLists.txt  api.h  rfid_center_ff.h  rfid_clock_recovery_zc_ff.h  rfid_command_gate_cc.h  rfid_reader_decoder.h  rfid_reader_f.h  rfid_tag_decoder_f.h
gr-usrp_reader_gen2/install/archlinux/: PKGBUILD
gr-usrp_reader_gen2/lib/: CMakeLists.txt  qa_usrp_reader_gen2.cc  qa_usrp_reader_gen2.h  rfid_center_ff_impl.cc  rfid_center_ff_impl.h  rfid_clock_recovery_zc_ff_impl.cc  rfid_clock_recovery_zc_ff_impl.h  rfid_command_gate_cc_impl.cc  rfid_command_gate_cc_impl.h  rfid_global_vars.h  rfid_reader_decoder_impl.cc  rfid_reader_decoder_impl.h  rfid_reader_f_impl.cc  rfid_reader_f_impl.h  rfid_tag_decoder_f_impl.cc  rfid_tag_decoder_f_impl.h  test_usrp_reader_gen2.cc
gr-usrp_reader_gen2/python/: CMakeLists.txt  __init__.py
gr-usrp_reader_gen2/swig/: CMakeLists.txt  usrp_reader_gen2_swig.i
uframe_tag/: moo.c  moo.h  umassmoo.ewp
usrp_reader/: Makefile  Makefile.swig  Makefile.swig.gen.t  README  README.hacking  README.rfid
usrp_reader/apps/: Makefile  WISP_reader.py  gen2_reader.py  single_tag_exp.py
usrp_reader/autom4te.cache/: output.1  traces.0
usrp_reader/config/: Makefile  Makefile.am  Makefile.in  ax_boost_date_time.m4  ax_boost_filesystem.m4  ax_boost_system.m4  cppunit.m4  gr_check_createfilemapping.m4  gr_doxygen.m4  gr_gprof.m4  gr_omnithread.m4  gr_require_mc4020.m4  gr_set_md_cpu.m4  gr_standalone.m4  gr_version.m4  lf_cc.m4  lf_cxx.m4  lf_x11.m4  pkg.m4  usrp_libusb.m4
usrp_reader/grc/: Makefile  Makefile.am  Makefile.in
usrp_reader/lib/: Makefile  Makefile.am  Makefile.in  rfid.cc  rfid_center_ff.cc  rfid_center_ff.cc_backup  rfid_center_ff.h  rfid_clock_recovery_zc_ff.cc  rfid_clock_recovery_zc_ff.h  rfid_command_gate_cc.cc  rfid_command_gate_cc.h  rfid_global_vars.cc  rfid_global_vars.h  rfid_reader_decoder.cc  rfid_reader_f.cc  rfid_reader_f.h  rfid_tag_decoder_f.cc  rfid_tag_decoder_f.h
usrp_reader/lib/.libs/: libgnuradio-rfid.so.0.0.0
usrp_reader/python/: Makefile  Makefile.am  Makefile.in  qa_rfid.py  run_tests  run_tests.in
usrp_reader/swig/: Makefile  Makefile.am  rfid_clock_recovery_zc_ff.i  rfid_swig.cc  rfid_swig.py
usrp_reader/swig/.libs/: _rfid_swig.soT
usrp_reader_gen2/: ChangeLog  Makefile.am  Makefile.common  Makefile.in  README.rfid  bootstrap  configure.ac
usrp_reader_gen2/apps/: Makefile.am  Makefile.in  WISP_reader.py  gen2_monitor.py  run_wisp.sh
usrp_reader_gen2/config/: ax_boost_base.m4  gr_check_mc4020.m4  gr_check_shm_open.m4  gr_check_usrp.m4  gr_fortran.m4  gr_lib64.m4  gr_no_undefined.m4  gr_pwin32.m4  gr_python.m4  gr_scripting.m4  gr_subversion.m4  gr_swig.m4  lf_warnings.m4  usrp_fusb_tech.m4
usrp_reader_gen2/lib/: qa_rfid.cc  qa_rfid.h  rfid_center_ff.cc  rfid_center_ff.h  rfid_clock_recovery_zc_ff.cc  rfid_clock_recovery_zc_ff.h  rfid_command_gate_cc.cc  rfid_command_gate_cc.h  rfid_global_vars.cc  rfid_global_vars.h  rfid_reader_decoder.cc  rfid_reader_decoder.h  rfid_reader_f.cc  rfid_reader_f.h  rfid_tag_decoder_f.cc  rfid_tag_decoder_f.h  test_all.cc
usrp_reader_gen2/python/: __init__.py
usrp_reader_gen2/swig/: Makefile.in  Makefile.swig.gen  rfid_center_ff.i  rfid_reader_decoder.i  rfid_swig.cc  rfid_swig.py
